# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  TESTING_ENHANCEMENT_SUMMARY.md  code-quality-changes.md  pyproject.toml  ui-theme-changes.md
.claude/commands/: add-and-commit.md  merge-worktree.md
backend/: ai_generator.py  app.py  config.py  document_processor.py  extract_people.py  logger.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: README.md  conftest.py  test_api_endpoints.py
backend/tests/diagnostics/: test_chromadb_health.py  test_environment.py  test_tools_basic.py
backend/tests/test_data/: valid_article.txt
backend/tests/unit/: test_ai_generator.py  test_search_tools.py  test_vector_store.py
docs/: extracted_people.json  noticia_1.txt  noticia_2.txt  noticia_3.txt  noticia_4.txt  noticia_5.txt
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint-fix.sh  lint.sh  quality-check.sh  typecheck.sh
